--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.2.9
 dj-database-url==0.5.0
 Django==3.0.7
 django-widget-tweaks==1.4.8
+easy-thumbnails==2.7
 pytz==2020.1
 sqlparse==0.3.1
 pagseguro==0.3.4
 django-paypal==1.0.0
+Pillow==7.2.0
